[package]
name = "xft_sys"
version = "0.0.1"
authors = ["Lukas Fürmetz <fuermetz@mailbox.org>"]
keywords = ["xft", "x11", "font"]
description = "Low level bindings to xft."
build = "build.rs"

[dependencies]
libc = "0.1.10"
freetype-sys = "0.1.2"
x11 = "2.1.0"

[dependencies.fontconfig_sys]
version = "0.0.1"
path= "fontconfig_sys"

[build-dependencies]
pkg-config = "0.3.5"
